Switch from g++ to gcc in Makefile otherwise it keeps to be loud :(

--- a/src/Makefile
+++ b/src/Makefile
@@ -17,7 +17,7 @@ HEADERS = main.h winlist.h
 all: xfdashboard
 
 xfdashboard: Makefile ${SOURCES} ${HEADERS}
-	g++ ${CFLAGS} -o xfdashboard ${SOURCES} ${LDFLAGS}
+	gcc ${CFLAGS} -o xfdashboard ${SOURCES} ${LDFLAGS}
 
 clean:
 	rm -f xfdashboard *.o
