First simple implementation of quicklaunch box. Does not react on any event!

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,15 +5,18 @@ BINDIR = ${PREFIX}/bin
 
 PKG_LIBWNCK="libwnck-1.0"
 PKG_CLUTTER="clutter-1.0 clutter-cogl-1.0"
+PKG_GIO="gio-2.0 gio-unix-2.0"
 
-PKGS="${PKG_LIBWNCK} ${PKG_CLUTTER}"
+PKGS="${PKG_LIBWNCK} ${PKG_CLUTTER} ${PKG_GIO}"
 
-CFLAGS += -std=gnu99 `pkg-config ${PKGS} --cflags` -pedantic -Wall
+CFLAGS += -std=gnu99 `pkg-config ${PKGS} --cflags` -pedantic -Wall -g
 LDFLAGS += `pkg-config ${PKGS} --libs`
 
 SOURCES = \
 	livewindow.c \
 	main.c \
+	quicklaunch.c \
+	quicklaunch-icon.c \
 	scalingflowlayout.c \
 	view.c \
 	windows-view.c
@@ -21,6 +24,8 @@ SOURCES = \
 HEADERS = \
 	livewindow.h \
 	main.h \
+	quicklaunch.h \
+	quicklaunch-icon.h \
 	scalingflowlayout.h \
 	view.h \
 	windows-view.h
