Try to solve layout and scaling problems in quicklaunch by creating a new layout manager (XfdashboardScalingBoxLayout). A side effect is that it simplifies the quicklaunch actor :) Also filenames have been cleaned up to match gobject method prefixes.

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,20 +13,22 @@ CFLAGS += -std=gnu99 `pkg-config ${PKGS} --cflags` -pedantic -Wall -g
 LDFLAGS += `pkg-config ${PKGS} --libs`
 
 SOURCES = \
-	livewindow.c \
+	live-window.c \
 	main.c \
 	quicklaunch.c \
 	quicklaunch-icon.c \
-	scalingflowlayout.c \
+	scaling-box-layout.c \
+	scaling-flow-layout.c \
 	view.c \
 	windows-view.c
 
 HEADERS = \
-	livewindow.h \
+	live-window.h \
 	main.h \
 	quicklaunch.h \
 	quicklaunch-icon.h \
-	scalingflowlayout.h \
+	scaling-box-layout.h \
+	scaling-flow-layout.h \
 	view.h \
 	windows-view.h
 
