Fixed Makefile to include new dependies on xfconf and dbus-glib

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,8 +7,9 @@ PKG_LIBWNCK="libwnck-1.0"
 PKG_CLUTTER="clutter-1.0 clutter-cogl-1.0"
 PKG_GIO="gio-2.0 gio-unix-2.0"
 PKG_GARCON="garcon-1"
+PKG_XFCONF="libxfconf-0 dbus-glib-1"
 
-PKGS="${PKG_LIBWNCK} ${PKG_CLUTTER} ${PKG_GIO} ${PKG_GARCON}"
+PKGS="${PKG_LIBWNCK} ${PKG_CLUTTER} ${PKG_GIO} ${PKG_GARCON} ${PKG_XFCONF}"
 
 CFLAGS += -std=gnu99 `pkg-config ${PKGS} --cflags` -pedantic -Wall -g
 LDFLAGS += `pkg-config ${PKGS} --libs`
