--- a/configure.ac.in
+++ b/configure.ac.in
@@ -18,7 +18,7 @@ dnl **************************************
 dnl *** Minimum package version needed ***
 dnl **************************************
 m4_define([wnck_minimum_version], [2.10])
-m4_define([clutter_minimum_version], [1.8.0])
+m4_define([clutter_minimum_version], [1.12.0])
 m4_define([gio_minimum_version], [2.30.2])
 m4_define([garcon_minimum_version], [0.2.0])
 m4_define([xfconf_minimum_version], [4.10.0])
@@ -33,7 +33,7 @@ m4_define([xfdashboard_debug_default], [ifelse(xfdashboard_version_tag(), [git],
 dnl ***************************
 dnl *** Initialize autoconf ***
 dnl ***************************
-AC_COPYRIGHT([Copyright (c) 2012 Stephan Haller <nomad@froevel.de>])
+AC_COPYRIGHT([Copyright (c) 2012-2013 Stephan Haller <nomad@froevel.de>])
 AC_INIT([xfdahboard], [xfdashboard_version], [https://github.com/gmc-holle/xfdashboard], [xfdashboard])
 AC_PREREQ([2.50])
 AC_REVISION([xfdashboard_version_build])
