--- a/src/enums.c.template
+++ b/src/enums.c.template
@@ -1,8 +1,8 @@
 /*** BEGIN file-header ***/
 /*
- * enums.c: Definitions of enumerations and flags used in GObject objects
+ * enums: Definitions of enumerations and flags used in GObject objects
  * 
- * Copyright 2012 Stephan Haller <nomad@froevel.de>
+ * Copyrigt 2012-2013 Stephan Haller <nomad@froevel.de>
  * 
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
