Implemented applications menu model which collects menu entries via garcon library. It can be used to display menu entries in a view in different ways: all entries, all entries of a menu and by sections like games, office etc. Two helper functions will help to filter the entries by menu or section.
Changed applications view to show applications menu entries instead of a clock ;) Clicking on a folder will show its contents but clicking on a menu item will start the associated application.

Also improved view to allow to scroll to requested position.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,6 +19,7 @@ xfdashboard_built_sources = \
 
 xfdashboard_headers = \
 	application.h \
+	applications-menu-model.h \
 	applications-view.h \
 	background.h \
 	button.h \
@@ -40,6 +41,7 @@ xfdashboard_SOURCES = \
 	$(xfdashboard_built_sources) \
 	$(xfdashboard_headers) \
 	application.c \
+	applications-menu-model.c \
 	applications-view.c \
 	background.c \
 	button.c \
