Added new actor called XfdashboardApplicationButton which is a button but its text and icon to display is retrieved either by a GarconMenuElement or a GAppInfo. This actor can also the associated application defined by either one of them. The application view was modified to use them.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,6 +19,7 @@ xfdashboard_built_sources = \
 
 xfdashboard_headers = \
 	application.h \
+	application-button.h \
 	applications-menu-model.h \
 	applications-view.h \
 	background.h \
@@ -42,6 +43,7 @@ xfdashboard_SOURCES = \
 	$(xfdashboard_built_sources) \
 	$(xfdashboard_headers) \
 	application.c \
+	application-button.c \
 	applications-menu-model.c \
 	applications-view.c \
 	background.c \
