Implement toggle button XfdashboardToggleButton which is derived from XfdashboardButton but can toggle its state between on and off.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -32,6 +32,7 @@ xfdashboard_headers = \
 	search-view.h \
 	stage.h \
 	textbox.h \
+	toggle-button.h \
 	types.h \
 	utils.h \
 	view.h \
@@ -58,6 +59,7 @@ xfdashboard_SOURCES = \
 	search-view.c \
 	stage.c \
 	textbox.c \
+	toggle-button.c \
 	utils.c \
 	view.c \
 	view-manager.c \
