Bad workaround for click action which prevents e.g. drag actions to work properly at least since clutter version 1.12. The click action will always win and "drag-begin" will never be emitted.
This object/file is a complete copy of the original clutter-click-action.{c,h} files of clutter 1.12 except for one line, renamed function names and applied coding style. As the clutter-click-action.{c,h} files of later clutter versions do not differ much from this one this object is expected to work even in this versions.

See bug: https://bugzilla.gnome.org/show_bug.cgi?id=714993

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,6 +24,7 @@ xfdashboard_headers = \
 	applications-view.h \
 	background.h \
 	button.h \
+	click-action.h \
 	fill-box-layout.h \
 	live-window.h \
 	quicklaunch.h \
@@ -50,6 +51,7 @@ xfdashboard_SOURCES = \
 	applications-view.c \
 	background.c \
 	button.c \
+	click-action.c \
 	fill-box-layout.c \
 	live-window.c \
 	main.c \
