--- a/configure.ac.in
+++ b/configure.ac.in
@@ -154,24 +154,17 @@ dnl ***************************
 echo
 echo "Build Configuration for $PACKAGE version $VERSION revision $REVISION:"
 echo
-echo "  libwcnck cflags:   $LIBWNCK_CFLAGS"
-echo "  libwcnck libs:     $LIBWNCK_LIBS"
+echo "Library versions used:"
+echo "  libwnck:    $LIBWNCK_VERSION"
+echo "  clutter:    $CLUTTER_VERSION"
+echo "  cogl:       $CLUTTER_COGL_VERSION"
+echo "  gio:        $GIO_VERSION"
+echo "  gio-unix:   $GIO_UNIX_VERSION"
+echo "  garcon:     $GARCON_VERSION"
+echo "  libxconf:   $LIBXFCONF_VERSION"
+echo "  dbus-glib:  $DBUS_GLIB_VERSION"
 echo
-echo "  clutter cflags:    $CLUTTER_CFLAGS $CLUTTER_COGL_CFLAGS"
-echo "  clutter libs:      $CLUTTER_LIBS $CLUTTER_COGL_LIBS"
-echo
-echo "  gio cflags:        $GIO_CFLAGS $GIO_UNIX_CFLAGS"
-echo "  gio libs:          $GIO_LIBS $GIO_UNIX_LIBS"
-echo
-echo "  garcon cflags:     $GARCON_CFLAGS"
-echo "  garcon libs:       $GARCON_LIBS"
-echo
-echo "  libxconf cflags:   $LIBXFCONF_CFLAGS"
-echo "  libxconf libs:     $LIBXFCONF_LIBS"
-echo
-echo "  dbus-glib cflags:  $DBUS_GLIB_CFLAGS"
-echo "  dbus-glib libs:    $DBUS_GLIB_LIBS"
-echo
+echo "Tools used:"
 echo "  glib-genmarshal:   $GLIB_GENMARSHAL"
 echo "  glib-mkenums:      $GLIB_MKENUMS"
 echo
