Bundle all signal handlers for libwnck signals in a simple window manager called XfdashboardWindowTracker and connect all windows/workspace related signals in all other objects to this new window tracker. Simply said: The window tracker is a proxy to the underlying window managing library.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -43,6 +43,7 @@ xfdashboard_headers = \
 	view-manager.h \
 	view-selector.h \
 	viewpad.h \
+	window-tracker.h \
 	windows-view.h \
 	workspace-selector.h
 
@@ -74,6 +75,7 @@ xfdashboard_SOURCES = \
 	view-manager.c \
 	view-selector.c \
 	viewpad.c \
+	window-tracker.c \
 	windows-view.c \
 	workspace-selector.c
 
