Remove any reference to libwnck in all object except for window tracker related objects. Window tracker objects wrap libwnck resources directly but are accessible in a "virtual" stable API. Doing it this way should provide a stable API for libwnck throughout all code and the only place to work with #ifdef's to work around changing libwnck API are the window tracker objects.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -44,6 +44,8 @@ xfdashboard_headers = \
 	view-selector.h \
 	viewpad.h \
 	window-tracker.h \
+	window-tracker-window.h \
+	window-tracker-workspace.h \
 	windows-view.h \
 	workspace-selector.h
 
@@ -76,6 +78,8 @@ xfdashboard_SOURCES = \
 	view-selector.c \
 	viewpad.c \
 	window-tracker.c \
+	window-tracker-window.c \
+	window-tracker-workspace.c \
 	windows-view.c \
 	workspace-selector.c
 
