--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -31,6 +31,7 @@ xfdashboard_headers = \
 	image.h \
 	live-window.h \
 	live-workspace.h \
+	notification.h \
 	quicklaunch.h \
 	scaled-table-layout.h \
 	scrollbar.h \
@@ -67,6 +68,7 @@ xfdashboard_SOURCES = \
 	live-window.c \
 	live-workspace.c \
 	main.c \
+	notification.c \
 	quicklaunch.c \
 	scaled-table-layout.c \
 	scrollbar.c \
