--- a/configure.ac.in
+++ b/configure.ac.in
@@ -34,7 +34,7 @@ dnl ***************************
 dnl *** Initialize autoconf ***
 dnl ***************************
 AC_COPYRIGHT([Copyright (c) 2012-2013 Stephan Haller <nomad@froevel.de>])
-AC_INIT([xfdahboard], [xfdashboard_version], [https://github.com/gmc-holle/xfdashboard], [xfdashboard])
+AC_INIT([xfdashboard], [xfdashboard_version], [https://github.com/gmc-holle/xfdashboard], [xfdashboard])
 AC_PREREQ([2.50])
 AC_REVISION([xfdashboard_version_build])
 
