Add new actor XfdashboardCollapseBox which holds (better: handles) only one child and acts like a expander. The stage puts XfdashboardWorkspaceSelector into such a collapse box to save space in stage. The workspace selector will then expand as soon as the pointer moves into it and will collapse when pointer moved out. XfdashboardDragAction has to handle and emit 'enter-event', 'leave-event' and 'motion-event' on its own because ClutterDragAction will turn off motion handling but it is needed to keep XfdashboardCollapseBox functional. That means the collapse box should still expand and collapse while a drag is in progress.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -25,6 +25,7 @@ xfdashboard_headers = \
 	background.h \
 	button.h \
 	click-action.h \
+	collapse-box.h \
 	drag-action.h \
 	drop-action.h \
 	fill-box-layout.h \
@@ -60,6 +61,7 @@ xfdashboard_SOURCES = \
 	background.c \
 	button.c \
 	click-action.c \
+	collapse-box.c \
 	drag-action.c \
 	drop-action.c \
 	fill-box-layout.c \
