--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,17 +1,36 @@
-src/application-icon.c
+[encoding: UTF-8]
+src/application-button.c
+src/application.c
+src/applications-menu-model.c
 src/applications-view.c
+src/background.c
 src/button.c
-src/common.c
+src/click-action.c
+src/collapse-box.c
+src/drag-action.c
+src/drop-action.c
 src/enums.c
 src/fill-box-layout.c
+src/image.c
 src/live-window.c
+src/live-workspace.c
 src/main.c
+src/marshal.c
 src/quicklaunch.c
-src/scaling-box-layout.c
-src/scaling-flow-layout.c
+src/scaled-table-layout.c
 src/scrollbar.c
-src/searchbox.c
+src/search-view.c
+src/stage.c
+src/text-box.c
+src/toggle-button.c
+src/utils.c
 src/view.c
+src/view-manager.c
 src/viewpad.c
 src/view-selector.c
+src/window-content.c
 src/windows-view.c
+src/window-tracker.c
+src/window-tracker-window.c
+src/window-tracker-workspace.c
+src/workspace-selector.c
