--- a/configure.ac.in
+++ b/configure.ac.in
@@ -106,24 +106,36 @@ XDT_CHECK_LIBX11_REQUIRE()
 dnl *******************************************
 dnl *** Check for X11 extension: XComposite ***
 dnl *******************************************
-x11_extension_composite="no"
 HAVE_XCOMPOSITE=""
-if $PKG_CONFIG --print-errors --exists xcomposite 2>&1; then
-	PKG_CHECK_MODULES(XCOMPOSITE, xcomposite >= [xcomposite_minimum_version])
-	AC_DEFINE([HAVE_XCOMPOSITE], [1], [Define if XComposite extension is available])
-	x11_extension_composite="yes"
+AC_ARG_ENABLE([xcomposite],
+	[AS_HELP_STRING([--disable-xcomposite],
+		[disable use of X11 extension XComposite @<:@default=enabled@:>@])],
+	[enabled_x11_extension_composite="$enableval"],
+	[enabled_x11_extension_composite=yes]
+)
+if test "x$enabled_x11_extension_composite" = xyes; then
+	if $PKG_CONFIG --print-errors --exists xcomposite 2>&1; then
+		PKG_CHECK_MODULES(XCOMPOSITE, xcomposite >= [xcomposite_minimum_version])
+		AC_DEFINE([HAVE_XCOMPOSITE], [1], [Define if XComposite extension is available])
+	fi
 fi
 AC_SUBST(HAVE_XCOMPOSITE)
 
 dnl ****************************************
 dnl *** Check for X11 extension: XDamage ***
 dnl ****************************************
-x11_extension_damage="no"
 HAVE_XDAMAGE=""
-if $PKG_CONFIG --print-errors --exists xdamage 2>&1; then
-	PKG_CHECK_MODULES(XDAMAGE, xdamage)
-	AC_DEFINE([HAVE_XDAMAGE], [1], [Define if XDamage extension is available])
-	x11_extension_damage="yes"
+AC_ARG_ENABLE([xdamage],
+	[AS_HELP_STRING([--disable-xdamage],
+		[disable use of X11 extension XDamage @<:@default=enabled@:>@])],
+	[enabled_x11_extension_damage="$enableval"],
+	[enabled_x11_extension_damage=yes]
+)
+if test "x$enabled_x11_extension_damage" = xyes; then
+	if $PKG_CONFIG --print-errors --exists xdamage 2>&1; then
+		PKG_CHECK_MODULES(XDAMAGE, xdamage)
+		AC_DEFINE([HAVE_XDAMAGE], [1], [Define if XDamage extension is available])
+	fi
 fi
 AC_SUBST(HAVE_XDAMAGE)
 
@@ -197,6 +209,10 @@ echo "  libxconf:   $LIBXFCONF_VERSION"
 echo "  dbus-glib:  $DBUS_GLIB_VERSION"
 echo
 echo "Tools used:"
-echo "  glib-genmarshal:   $GLIB_GENMARSHAL"
-echo "  glib-mkenums:      $GLIB_MKENUMS"
+echo "  glib-genmarshal:  $GLIB_GENMARSHAL"
+echo "  glib-mkenums:     $GLIB_MKENUMS"
+echo
+echo "Features enabled:"
+echo "  XComposite:  $enabled_x11_extension_composite"
+echo "  XDamage:     $enabled_x11_extension_damage"
 echo
