Add theming support
Added support for theming xfdashboard. In addition it is now a requirement that least one theme is installed and referenced in xfconf at property /theme. A default theme named "xfdashboard" is included and used if xfconf property is not set. This theme is a copy of the previously hard coded style.

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,8 +12,9 @@ DISTCLEANFILES =							\
 	intltool-merge							\
 	intltool-update
 
-SUBDIRS = 									\
-	po 										\
+SUBDIRS = 								\
+	data								\
+	po 								\
 	src
 
 distclean-local:
@@ -22,7 +23,7 @@ distclean-local:
 html: Makefile
 	make -C doc html
 
-dist-bz2: dist
+dist-bz2: dist-gzip
 	zcat $(PACKAGE)-$(VERSION).tar.gz | \
 	bzip2 --best -c > $(PACKAGE)-$(VERSION).tar.bz2
 
