Initial support for tooltips
Tooltips are implemented as a ClutterAction which can be added to an actor like a click actions or the drag'n'drop ones. The tooltip action will emit the action signal "show-tooltip" at the stage of the tooltip's actor which will take to display the tooltip.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -46,6 +46,7 @@ xfdashboard_headers = \
 	text-box.h \
 	theme-css.h \
 	toggle-button.h \
+	tooltip-action.h \
 	types.h \
 	utils.h \
 	view.h \
@@ -92,6 +93,7 @@ xfdashboard_SOURCES = \
 	text-box.c \
 	theme-css.c \
 	toggle-button.c \
+	tooltip-action.c \
 	utils.c \
 	view.c \
 	view-manager.c \
